# mmidas-jax

./: pyproject.toml
src/mmidas_jax/: __init__.py  main.py  mlp_mnist.py  mnist.py  mnist_test.py  mnist_test.py.bak  model.py
tests/: test_mnist.py  test_mnist.py.bak
